wp/davidhikesalot.css
/**
 * CSS styling for davidhikesalot.com blogger edition
 * Prerequisites:
 * - Font Awesome 5 Free
*/

/** WP Natural Lite Theme Overrides */
a, a:link, a:visited {
  color: black;
  text-decoration: none;
}
a:hover {
  color: black;
  text-decoration: underline;
}

/** Global overrides */
ul { margin-bottom: 10px; }

.capitalize { text-transform: capitalize; }
.small-text {font-size: small !important;}

#sectionParkDetails .card-header { padding: .75rem; }
.page-section    h6:first-of-type { margin-top: 0; }
.page-subsection h6 { margin-bottom: 0px; font-weight: bold; }

ul.status-list { padding-left: 0px; font-size: small !important; }
ul.status-list li { display: inline-block; list-style: none; list-style-type: none; }

ul.parks-list  { column-count: 3; margin-left: 5px; padding-left: 20px; font-size: small !important; }
ul.parks-list li { list-style: none; list-style-type: none; }

ul.hikes-list  { column-count: 3; margin-left: 5px; padding-left:20px; font-size: small !important; }
ul.hikes-list li { list-style: none; list-style-type: none; }

/** Bullet Icons */
.bullet-icon:before { font-family: "Font Awesome 5 Free"; margin: 0 5px 0 -20px; display: inline-block; vertical-align: middle; }
.status-icon:before { font-family: "Font Awesome 5 Free"; margin: 0 5px; }

/* FontAwesome has a bug where 700 is solid and 900 is regular. Remove this when they fix it */
.normal:before      { content: '\f111'; font-weight: 700; color: black; font-size: 2px; padding: 0 3px 2px 3px; }
.no-hikes:before    { content: '\f057'; font-weight: 700; color: #c0c0c0; }
.not-started:before { content: '\f056'; font-weight: 700; color: #ee7600; }
.started:before     { content: '\f111'; color: blue; }
.halfway:before     { content: '\f111'; font-weight: 700; color: blue; clip-path: polygon(50% 0%, 50% 100%, 0% 100%, 0% 0%); }
.almost-done:before { content: '\f111'; font-weight: 700; color: blue; }
.completed:before   { content: '\f058'; font-weight: 700; color: green; }
.favorite:before    { content: '\f005'; }
.writeup:before     { content: '\f302'; }


/* Park Details */
#sectionParkDetails img { object-fit: contain; width: 20vw /* so the map always vertically fits on page */; }

/* Mobile Overrides (single column, don't show big images) */
@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  .site-descriptionnbt { line-height: 1.75em; padding: 10px 20px; }
  .site-brandingnbt { margin: 20px auto 0 auto; }
  .post-title.entry-title { margin-top: 0; }
  ul.status-list li { float: unset }
  ul.parks-list { column-count: 1; }
  ul.hikes-list { column-count: 1; }
}

